--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -11,6 +11,7 @@
   },
   "extends": ["airbnb-base"],
   "rules": {
+    "quotes": "error",
     "no-shadow": "off",
     "no-param-reassign": "off",
     "eol-last": "off",
